fix banner distortion

--- a/app/app_sitelette/sitefiles/css/tiles_style.css
+++ b/app/app_sitelette/sitefiles/css/tiles_style.css
@@ -74,7 +74,6 @@
 
 .tile .header .business-banner {
 	width: 100%;
-	height: 55px;
 }
 
 .tile .header .promo-type {
